Table Trainees {
  id int [pk, increment]
  name varchar [not null]
  email varchar
  phone varchar
  role varchar
}

Table qualification_types {
  id int [pk, increment]
  name varchar
  description text
}

Table trainee_qualifications {
  id int [pk, increment]
  trainees_id int
  qualification_type_id int
  issue_date date
  expiry_date date
}

Enum resource_type {
  aircraft
  simulator
}

Enum resource_status {
  available
  booked
  maintenance
}

Table resources {
  id int [pk, increment]
  name varchar
  type resource_type
  status resource_status
}

Table alerts {
  id int [pk, increment]
  qualification_id int
  message varchar
  alert_date date
  is_sent boolean [default: false]
}

Ref: trainee_qualifications.trainees_id > Trainees.id
Ref: trainee_qualifications.qualification_type_id > qualification_types.id
Ref: alerts.qualification_id > trainee_qualifications.id